--- a/03-angular/ejemplo/src/app/app.component.html
+++ b/03-angular/ejemplo/src/app/app.component.html
@@ -1,20 +1,31 @@
-<!-- EMMET -->
+<!--EMMET-->
 <h1>EPN</h1>
 <ul>
   <li>
-    <a [routerLink]="['/inicio']">Inicio</a>
+    <a [routerLink]="['/inicio']" >Inicio</a>
   </li>
   <li>
-    <a [routerLink]="['/login']">Login</a>
+    <a [routerLink]="['/login']" >Login</a>
   </li>
   <li>
-    <a [routerLink]="['/app']">app</a>
+    <a [routerLink]="['/app']" >App</a>
     <ul>
       <li>
-        <a [routerLink]="['/app', 'usuario']">App Usuario</a>
+        <a [routerLink]="['/app','usuario']">App Usuario</a>
       </li>
       <li>
-        <a [routerLink]="['/app', 'post']">App Post</a>
+        <a [routerLink]="['/app','post']">App Post</a>
+      </li>
+    </ul>
+  </li>
+  <li>
+    <a [routerLink]="['/lazy-inventario']" >Inventario</a>
+    <ul>
+      <li>
+        <a [routerLink]="['/lazy-inventario','bodega']">Bodega</a>
+      </li>
+      <li>
+        <a [routerLink]="['/lazy-inventario','reporte']">Reporte</a>
       </li>
     </ul>
   </li>
